.provarCaches/00D5f000005vwGkEAI/objects/rstk__soconpbddist__c.object
<CustomObject>
    <description>soconpbddist__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__soconpbddist_soconpbdtl__r.rstk__externalid__c + &apos;_&apos; + rstk__soconpbddist_salesacct__r.rstk__syacc_mfgacct__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__soconpbddist_salesacct__r.rstk__syacc_mfgacct__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbddist_amount__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The Amount to be distributed to the (Revenue) Sub Ledger Account defined.</inlineHelpText>
        <label>Amount</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbddist_comments__c</fullName>
        <inlineHelpText>User-defined comments up to 255 characters in length.</inlineHelpText>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbddist_pct__c</fullName>
        <inlineHelpText>The Percentage of the total charge to be distributed to the (Revenue) Sub Ledger Account defined.</inlineHelpText>
        <label>Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbddist_salesacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The Sub Ledger Account against which this distributed Amount will be charged.</inlineHelpText>
        <label>Sales Account</label>
        <referenceTo>rstk__syacc__c</referenceTo>
        <relationshipLabel>Periodic Billing Detail Distribution</relationshipLabel>
        <relationshipName>soconpbddists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbddist_soconpbdtl__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Periodic Billing Detail</label>
        <referenceTo>rstk__soconpbdtl__c</referenceTo>
        <relationshipLabel>Periodic Billing Detail Distribution</relationshipLabel>
        <relationshipName>soconpbdtls</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Periodic Billing Detail Distribution</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>rstk__RS_Periodic_Billing_Detail_Distribution</fullName>
        <columns>NAME</columns>
        <columns>rstk__soconpbddist_soconpbdtl__c</columns>
        <columns>rstk__soconpbddist_amount__c</columns>
        <columns>rstk__soconpbddist_pct__c</columns>
        <columns>rstk__soconpbddist_salesacct__c</columns>
        <columns>rstk__soconpbddist_comments__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Periodic Billing Detail Distribution</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Periodic Billing Detail Distribution Nam</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Periodic Billing Detail Distribution</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstk__Sales_Account</fullName>
        <active>true</active>
        <description>Sales Account is Required.</description>
        <errorConditionFormula>ISBLANK(rstk__soconpbddist_salesacct__c  )</errorConditionFormula>
        <errorMessage>Sales Account is Required.</errorMessage>
    </validationRules>
</CustomObject>